--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -89,6 +89,6 @@ stages:
           - task: AzureWebApp@1
             displayName: 'Azure App Service Deploy: website'
             inputs:
-              azureSubscription: 'serviceconnection_pipeline'
+              azureSubscription: 'connectionservice'
               appName: '$(WebAppName)'
               package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
